Bug 44338 - [SNB]GPU hang while playing video with myplayer
Summary: [SNB]GPU hang while playing video with myplayer
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-30 23:46 UTC by Guang Yang
Modified: 2012-01-04 01:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg.log (692 bytes, text/plain)
2011-12-30 23:46 UTC, Guang Yang
no flags Details
i915_error_state (2.05 MB, text/plain)
2011-12-30 23:49 UTC, Guang Yang
no flags Details
Xorg.log (27.41 KB, text/plain)
2011-12-30 23:50 UTC, Guang Yang
no flags Details

Description Guang Yang 2011-12-30 23:46:24 UTC
Created attachment 54994 [details]
dmesg.log

System Environment:
--------------------------
Platform:        SandyBridge
Kernel:         (drm-intel-next)097354eb14fa94d31a09c64d640643f58e4a5a9a
Libdrm:         (master)2.4.29-3-gef20301a11afae50bfe127002913dbd0b81ddccc
Mesa:           (master)a5608a5098e059510ba3fc79c8c0ba928db60257
Xserver:        
(master) xorg-server-1.11.99.2-70-ga28ff2cf92c2b35e02eacca21af929afabbf6b83
Xf86_video_intel: (master)2.17.0-234-g655a96cd5f12ff7fe593e7da5f34c7c92ef9b87d

Bug detailed description:
-------------------------
Every time I playing video with myplayer while starting X,the GPU will hang .
then I have try another X version,it can work well.

Kernel: (drm-intel-next)097354eb14fa94d31a09c64d640643f58e4a5a9a
Libdrm: (master)2.4.27-1-g961bf9b5c2866ccb4fedf2b45b29fb688519d0db
Mesa: (7.11)b95767a57ad499a2ed7431e8b0b52966c6dc0a45
Xserver: (server-1.11-branch)xorg-server-1.11.1
Xf86_video_intel:
(master)2.16.901-31-g6fd0754e9c81164ca0fdcf96ba2bfb419568187f

Reproduce steps:
----------------
1. start X
2. mplayer -vo xv XXXXX.mpeg
Comment 1 Guang Yang 2011-12-30 23:49:31 UTC
Created attachment 54995 [details]
i915_error_state
Comment 2 Guang Yang 2011-12-30 23:50:23 UTC
Created attachment 54996 [details]
Xorg.log
Comment 3 Chris Wilson 2011-12-31 09:23:09 UTC
commit 770a953ff03bb8328c3f29e274d225528840f30c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Dec 31 17:19:08 2011 +0000

    uxa/video: Clear all state structures before uploading
    
    A regression from eb859f644633e left some of the state uninitialised
    before uploading to the GPU leading to undefined behaviour.
    
    Reported-by: Alexey Shumitsky <alexey.shumitsky@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44338
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44252
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.